fix horizontal scroll in mobile; tweaked canvas size on mobile landscape/portrait

--- a/paradise.css
+++ b/paradise.css
@@ -1,6 +1,7 @@
 body {
     background-color: #0000C8;
     color: #FFF;
+    overflow: hidden;
 }
 
 p.center {
@@ -32,7 +33,6 @@ div.center {
 @media only screen and (max-width:512px) {
     div.main {
         zoom: 0.7;
-        -moz-transform: scale(0.7);
     }
 }
 
